--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-image-zoom": "^0.7.0",
     "mongoose": "^7.5.4",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "puppeteer": "^21.5.2",
